--- a/src/app/pages/card-coupon/card-coupon.page.html
+++ b/src/app/pages/card-coupon/card-coupon.page.html
@@ -1,13 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>card-coupon</ion-title>
+    <ion-back-button slot="start"></ion-back-button>
+    <ion-title>Card Coupon</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">card-coupon</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-content class="ion-text-center">
+      <qrcode [qrdata]="'QRCode'" [width]="256" [errorCorrectionLevel]="'M'" elementType="svg"></qrcode>
+    </ion-card-content>
+  </ion-card>
+  
 </ion-content>
